# embedded-nand

./: Cargo.toml  README.md
embedded-nand/: Cargo.toml  README.md
embedded-nand-async/: Cargo.toml
embedded-nand-async/src/: address.rs  iter.rs  lib.rs
embedded-nand/src/: address.rs  iter.rs  lib.rs  test.rs
examples/: Cargo.toml  Embed.toml  build.rs  rust-toolchain.toml
examples/.cargo/: config.toml
flashmap/: Cargo.toml
flashmap/src/: lib.rs
spi-flash/: Cargo.toml
spi-flash/src/: address.rs  async_trait.rs  blocking.rs  device.rs  error.rs  lib.rs  utils.rs
spi-nand/: Cargo.toml
spi-nand-devices/: .~lock.FeatureTable.ods#  Cargo.toml  FeatureTable.ods
spi-nand-devices/src/: lib.rs
spi-nand-devices/src/winbond/: README.md  mod.rs  w25n.rs
spi-nand/src/: cmd_async.rs  cmd_blocking.rs  device.rs  error.rs  lib.rs
src/: address.rs  genericspi.rs  lib.rs  spi.rs  traits.rs
src/spiflash/: address.rs  device.rs  mod.rs
winbond/: Cargo.toml
winbond/src/: lib.rs  w25n.rs
winbond/w25n/: Cargo.toml
winbond/w25n/src/: lib.rs
