[package]
name = "embedded-nand"
version = "0.1.0"
edition = "2021"

[dependencies]
defmt = { version = "0.3", optional = true }
serde = { version = "1", optional = true, default-features = false, features = [
    "derive",
] }


[features]
# Only enable this when developing the library. Useful for syntax highlighting.
default = ["defmt", "serde"]
defmt = ["dep:defmt"]
serde = ["dep:serde"]
