[package]
name = "flashmap"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-async = { version = "1.0.0", features = ["defmt-03"] }
embedded-nand = { path = "../embedded-nand" }

defmt = "1.0.1"
thiserror = { version = "2.0.12", default-features = false }


[features]
defmt = ["embedded-nand/defmt"]
log = ["embedded-nand/log"]
